Tst/Tests/Neg/Basic/RepeatMaxQSize.p
main machine Foo {
    maxqueue 10;
    maxqueue 20;
    start state foo { }
}
